<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context=".MainActivity">


    <LinearLayout
            android:layout_weight="1"
            android:layout_height="0dip"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            >
        <Button
                android:layout_height="match_parent"
                android:layout_width="0dip"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:onClick="onMovie"
                android:text="@string/activity_main_movie"
                />

        <Button
                android:layout_height="match_parent"
                android:layout_width="0dip"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:onClick="onBar"
                android:text="@string/activity_main_bar"
                />

    </LinearLayout>
    <LinearLayout
            android:layout_weight="1"
            android:layout_height="0dip"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            >

        <Button
                android:layout_height="match_parent"
                android:layout_width="0dip"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:onClick="onKTV"
                android:text="@string/activity_main_ktv"
                />

        <Button
                android:layout_height="match_parent"
                android:layout_width="0dip"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:onClick="onShow"
                android:text="@string/activity_main_show"
                />

    </LinearLayout>




</LinearLayout>
